# C_Data_Structures

./: .gitignore  README.md
Archive/C_BST/: bst.c
Archive/C_Hash_Table/: hash_table.h
Archive/C_List/: main.c
Archive/C_Vector/: Makefile  main.c
C_Allocation_Metrics/: Makefile  allocation_metrics.c  allocation_metrics.h
C_BST/: Makefile  bst.c  bst.h  main.c
C_BST_Dictionary/: dictionary.c  dictionary.h  main.c
C_Dictionary/: Makefile  dictionary.c  dictionary.h  main.c
C_Dynamic_Array/: CMakeLists.txt  contact.c  contact.h  dynamic_array.c  dynamic_array.h  dynamic_array_int.c  dynamic_array_int.h  main.c
C_Hash_Table/: CMakeLists.txt  Makefile  hash_table.c  hash_table.h  ht_str_int.c  ht_str_int.h  main.c
C_Linked_List/: Makefile  linked_list.c  linked_list.h  main.c
C_List/: Makefile  list.c  list.h  main.c
C_Queue/: main.c  queue.c  queue.h
C_RBT/: Makefile  main.c  rbt.c  rbt.h
C_Template/: Makefile  template.c  template.h
C_Vector/: Makefile  main.c  vector.c  vector.h
C_Vector_new/: main.c  vector.c  vector.h
Template/: Makefile  template.c  template.h
